--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "pluralize-words-ptbr",
-  "version": "1.0.4",
-  "description": "Obtenha o plural em portugês (BR) de palavras no singular",
-  "main": "pluralize-ptbr.js",
-  "dependencies": {},
-  "devDependencies": {
-    "browserify": "^13.0.1",
-    "gulp": "^3.9.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.4",
-    "vinyl-source-stream": "^1.1.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "name": "@umatch/pluralize-ptbr",
+  "version": "0.1.0",
+  "description": "Obtenha o plural de palavras em portugês brasileiro",
+  "main": "main.js",
   "keywords": [
     "pluralize",
-    "br",
     "plural",
-    "em",
-    "portguês"
+    "portguês",
+    "pt-br",
+    "ptbr"
   ],
-  "author": "Luiz Felipe Bolsoni Gomes",
-  "license": "ISC"
+  "author": "Umatch",
+  "license": "UNLICENSED",
+  "dependencies": {},
+  "devDependencies": {
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1"
+  }
 }
