--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@umatch/pluralize-ptbr",
-  "version": "0.1.0",
-  "description": "Obtenha o plural de palavras em portugês brasileiro",
-  "main": "main.js",
+  "version": "0.1.1",
+  "description": "Obtenha o plural de palavras em português brasileiro",
+  "main": "index.js",
   "keywords": [
     "pluralize",
     "plural",
@@ -16,7 +16,6 @@
   "devDependencies": {
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1"
   }
