--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umatch/pluralize-ptbr",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Obtenha o plural de palavras em português brasileiro",
   "main": "index.js",
   "keywords": [
@@ -12,11 +12,17 @@
   ],
   "author": "Umatch",
   "license": "UNLICENSED",
+  "homepage": "https://github.com/umatch-oficial/pluralize-ptbr#readme",
+  "repository": "github:umatch-oficial/pluralize-ptbr",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {},
   "devDependencies": {
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^28.1.3",
     "prettier": "^2.7.1"
   }
 }
