--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@umatch/pluralize-ptbr",
   "version": "0.1.2",
   "description": "Obtenha o plural de palavras em português brasileiro",
-  "main": "index.js",
+  "main": "src/index.js",
   "keywords": [
     "pluralize",
     "plural",
