--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.3",
   "description": "Obtenha o plural de palavras em português brasileiro",
   "main": "src/index.js",
+  "files": ["src/"],
   "keywords": [
     "pluralize",
     "plural",
