Use describe.each

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.4",
   "description": "Obtenha o plural de palavras em português brasileiro",
   "main": "src/index.js",
-  "files": ["src/"],
+  "files": [
+    "src/"
+  ],
   "keywords": [
     "pluralize",
     "plural",
@@ -20,6 +22,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@types/jest": "^29.2.0",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
