--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "build": "tsc --build src",
     "test": "jest",
     "lint": "eslint . --ext=.ts",
-    "prepublishOnly": "npm test && npm run lint",
+    "prepublishOnly": "npm run lint && npm run build && npm test",
     "prepare": "npm run build",
-    "preversion": "npm run lint",
-    "postversion": "git push && git push --tags"
+    "preversion": "npm run lint && npm run build && npm test",
+    "postversion": "git push && git push --tags",
+    "patch-and-publish": "npm version patch && npm publish --ignore-scripts",
+    "minor-and-publish": "npm version minor && npm publish --ignore-scripts",
+    "major-and-publish": "npm version major && npm publish --ignore-scripts"
   },
   "devDependencies": {
     "@types/jest": "^29.2.0",
