fix(npm): publish src directory
This allows declaration maps to work as expected.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "repository": "github:umatch-oficial/pluralize-ptbr",
   "main": "./lib/index.js",
   "files": [
+    "src/**/*.ts",
     "lib/**/*.ts",
     "lib/**/*.ts.map",
     "lib/**/*.js"
