--- a/package.json
+++ b/package.json
@@ -30,23 +30,23 @@
     "release": "npm run lint && npm run build && npm test && commit-and-tag-version"
   },
   "devDependencies": {
-    "@types/jest": "^29.2.0",
-    "@types/node": "^18.14.6",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "@umatch/eslint-config": "^1.1.0",
-    "commit-and-tag-version": "^11.2.1",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "@umatch/eslint-config": "^1.2.1",
+    "commit-and-tag-version": "^11.2.2",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.36.0",
+    "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-import-resolver-exports": "^1.0.0-beta.5",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0",
+    "jest": "^29.6.1",
     "prettier": "^2.8.6",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5"
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.6"
   },
   "config": {
     "commitizen": {
