style: format files

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,10 +1,7 @@
 {
-    "testEnvironment": "node",
-    "moduleDirectories": [
-        "node_modules",
-        "src"
-    ],
-    "transform": {
-        "^.+\\.(t|j)sx?$": ["ts-jest", { "tsconfig": "tsconfig.base.json" }]
-    }
+  "testEnvironment": "node",
+  "moduleDirectories": ["node_modules", "src"],
+  "transform": {
+    "^.+\\.(t|j)sx?$": ["ts-jest", { "tsconfig": "tsconfig.base.json" }]
+  }
 }
