--- a/jest.config.json
+++ b/jest.config.json
@@ -2,6 +2,6 @@
   "testEnvironment": "node",
   "moduleDirectories": ["node_modules", "src"],
   "transform": {
-    "^.+\\.(t|j)sx?$": ["ts-jest", { "tsconfig": "tsconfig.base.json" }]
+    "^.+\\.(t|j)sx?$": ["ts-jest", { "tsconfig": "tsconfig.json" }]
   }
 }
